fixed bug with resolutionfixed a bug with resolution on mobile devices added a couple of media queries. and changed the background for mobile devices

--- a/style.css
+++ b/style.css
@@ -2,16 +2,22 @@
 margin: 0;
 padding: 0;
 box-sizing: border-box;
-
-
 }
+
+
+
 body {
+background:url(/img/qc_main.jpg);
+background-size: cover;
+backdrop-filter: blur(3px);
 font-family: 'quake2';
-font-size: calc(24px + 20 * (100vw / 1280));
+font-size: 2.3rem;
 font-weight: 550;
-color: rgb(0, 0, 0);
+color: rgb(102, 179, 189);
 
 }
+
+
 @font-face {
 font-family:'Quake2';
 src: url(./fonts/quake2.ttf);
@@ -20,34 +26,30 @@ src: url(./fonts/dpquake_.ttf);
 }
 
 
+
 .window {
-background:url(/img/qc_main.jpg);
 width:100%;
-height:100vh;
-background-size: cover;
+min-height:100vh;
 display: flex;
-align-items: center;
 justify-content: center;
+align-items:center;
+background:rgba(0, 0, 0, 0.301);
+
 }
 
 .glass-window {
-background:rgba(0, 0, 0, 0.301);
+
 width:100%;
 height: 100%;
 margin: 0 auto;
-backdrop-filter: blur(3px);
-padding: 5px;
+padding: 15px;
 text-align: center;
-
+display: flex;
+justify-content: center;
+align-items:center;
 
 }
-.description {
-position: absolute;
-top: 50%;
-left: 50%;
-margin-right: -50%;
-transform: translate(-50%, -50%);
-}
+
 
 p {
 display: flex;
@@ -56,12 +58,14 @@ text-align: center;
 margin: 10px;
 padding: 3px;
 justify-content:space-around;
-text-shadow: 1px 2px 1px  rgb(250, 250, 250); 
+text-shadow: 2px 3px 1px rgb(0 0 0);
 
 }
+
 .background_card {
 width: 80%;
-background:rgba(255, 255, 255, 0.075);
+background: rgba(255, 255, 255, 0.175);
+border: 1px solid rgb(102, 179, 189);
 border-radius: 20px;
 margin: 0 auto;
 }
